# liguilla

./: README.md  main.py  pyproject.toml
exports/: 738.csv  BE1.csv  C1.csv  DK1.csv  E3G1.csv  E3G2.csv  ES1.csv  ES2.csv  FR1.csv  GB1.csv  IT1.csv  L1.csv  NL1.csv  PO1.csv  RU1.csv  SC1.csv  TR1.csv  ac_sparta_praga.csv  aek_athenas.csv  almere_city_fc.csv  apoel_fc.csv  barcelona.csv  djurgardens_if.csv  estrella_roja_de_belgrado.csv  fc_astana.csv  fc_dynamo_kyiv.csv  fc_sheriff_tiraspol.csv  fcsb.csv  ferencvaros_tc.csv  fk_bodo_glimt.csv  gnk_dinamo_zagreb.csv  hapoel_beer_sheva.csv  jagiellonia_bialystok.csv  lask.csv  lech_poznan.csv  legia_de_varsovia.csv  ludogorets_razgrad.csv  maccabi_haifa.csv  maccabi_tel_aviv.csv  malmoe_ff.csv  (+24 more)
exports/BE1/: Beerschot VA.csv  KAS Eupen.csv  KV Kortrijk.csv  RWDM Brussels.csv  cercle_brugge.csv  fc_brugge.csv  fcv_dender_eh.csv  kaa_gent.csv  krc_genk.csv  kv_mechelen.csv  kvc_westerlo.csv  oud_heverlee_leuven.csv  raal_la_louviere.csv  royal_antwerpen_fc.csv  royale_union_saint_gilloise.csv  rsc_anderlecht.csv  rsc_charleroi.csv  standard_luttich.csv  sv_zulte_waregem.csv  vv_st_truiden.csv
exports/C1/: bsc_young_boys.csv  fc_basel_1893.csv  fc_lausanne_sport.csv  fc_lugano.csv  fc_luzern.csv  fc_sion.csv  fc_st_gallen_1879.csv  fc_thun.csv  fc_winterthur.csv  fc_zurich.csv  grasshopper_club_zurich.csv  servette_fc.csv
exports/DK1/: Aalborg BK.csv  Lyngby Boldklub.csv  aarhus_gf.csv  brondby_if.csv  fc_fredericia.csv  fc_kopenhagen.csv  fc_midtjylland.csv  fc_nordsjaelland.csv  odense_boldklub.csv  randers_fc.csv  (+4 more)
(+172 files in other folders)
